...
                            contentDescription = null
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(56.dp)
                        .testTag("email"),
                    colors = TextFieldDefaults.colors(
                        unfocusedContainerColor = Color.Transparent,
                        focusedContainerColor = Purple80,
                        focusedIndicatorColor = Pink80,
                        unfocusedIndicatorColor = Color.Transparent
                    )
...
                            contentDescription = null
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(56.dp)
                        .testTag("password"),
                    colors = TextFieldDefaults.colors(
                        unfocusedContainerColor = Color.Transparent,
                        focusedContainerColor = Purple80,
                        focusedIndicatorColor = Pink80,
                        unfocusedIndicatorColor = Color.Transparent
                    ),
...
                            }
                    }
                },
                modifier = Modifier
                    .fillMaxWidth(0.95f)
                    .height(55.dp)
                    .testTag("loginBtn"),
                colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
                shape = RoundedCornerShape(30.dp),
                contentPadding = PaddingValues(0.dp)
            ) {
                Box(
                    modifier = Modifier
...
