...
                            value = FirstName,
                            onValueChange = { FirstName = it },
                            placeholder = { Text("First Name", color = Color.Black) },
                            leadingIcon = {
                                Image(painter = painterResource(R.drawable.baseline_person_24), contentDescription = null)
                            },
                            modifier = Modifier.fillMaxWidth().height(56.dp).testTag("firstName"),
                            colors = TextFieldDefaults.colors(
                                unfocusedContainerColor = Color.Transparent,
                                focusedContainerColor = Purple80,
                                focusedIndicatorColor = Pink80,
                                unfocusedIndicatorColor = Color.Transparent
                            )
...
                            value = Email,
                            onValueChange = { Email = it },
                            placeholder = { Text("Email", color = Color.Black) },
                            leadingIcon = {
                                Image(painter = painterResource(R.drawable.baseline_alternate_email_24), contentDescription = null)
                            },
                            modifier = Modifier.fillMaxWidth().height(56.dp).testTag("regEmail"),
                            colors = TextFieldDefaults.colors(
                                unfocusedContainerColor = Color.Transparent,
                                focusedContainerColor = Purple80,
                                focusedIndicatorColor = Pink80,
                                unfocusedIndicatorColor = Color.Transparent
                            )
...
                            value = Password,
                            onValueChange = { Password = it },
                            placeholder = { Text("Password", color = Color.Black) },
                            leadingIcon = {
                                Image(painter = painterResource(R.drawable.baseline_key_24), contentDescription = null)
                            },
                            modifier = Modifier.fillMaxWidth().height(56.dp).testTag("regPassword"),
                            colors = TextFieldDefaults.colors(
                                unfocusedContainerColor = Color.Transparent,
                                focusedContainerColor = Purple80,
                                focusedIndicatorColor = Pink80,
                                unfocusedIndicatorColor = Color.Transparent
                            ),
...
                            value = ConfirmPassword,
                            onValueChange = { ConfirmPassword = it },
                            placeholder = { Text("Confirm Password", color = Color.Black) },
                            leadingIcon = {
                                Image(painter = painterResource(R.drawable.baseline_lock_24), contentDescription = null)
                            },
                            modifier = Modifier.fillMaxWidth().height(56.dp).testTag("confirmPassword"),
                            colors = TextFieldDefaults.colors(
                                unfocusedContainerColor = Color.Transparent,
                                focusedContainerColor = Purple80,
                                focusedIndicatorColor = Pink80,
                                unfocusedIndicatorColor = Color.Transparent
                            ),
...
                        modifier = Modifier.fillMaxWidth().padding(horizontal = 28.dp),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Checkbox(
                            checked = checkbox,
                            onCheckedChange = { checkbox = it },
                            modifier = Modifier.testTag("checkbox"),
                            colors = CheckboxDefaults.colors(
                                uncheckedColor = Color.White,
                                checkmarkColor = Color.Blue,
                                checkedColor = Color.White
                            )
                        )
...
                        userViewModel.register(Email, Password) { success, message, userId ->
                            if (success) {
                                val model = UserModel(
                                    id = userId,
                                    firstName = FirstName,
                                    lastName = LastName,
                                    email = Email,
                                    dob = "",
                                    gender = ""
                                )
                                userViewModel.addUserToDatabase(userId, model) { dbSuccess, dbMessage ->
                                    Toast.makeText(context, dbMessage, Toast.LENGTH_SHORT).show()
                                    if (dbSuccess) {
...
                                }
                            } else {
                                Toast.makeText(context, message, Toast.LENGTH_SHORT).show()
                            }
                        }
                    },
                    modifier = Modifier.width(600.dp).height(65.dp).testTag("signUpBtn"),
                    colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
                    shape = RoundedCornerShape(25.dp)
                ) {
                    Box(
                        modifier = Modifier
                            .fillMaxSize()
...
